--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "./logo_init.css";
 @import "./navbar.css";
+@import "./Home.css";
 
 :root {
   --background: #1e323c;
@@ -15,11 +16,10 @@
 
 
 body {
-  background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   @media (max-width: 1204px) {
-      background: #4A6C7B;
+      /* background: #4A6C7B; */
   }
 }
 /* Móviles */
@@ -50,6 +50,7 @@ html, body {
   scroll-behavior: smooth;
 }
 .HomeFor {
+    /* background-color: #1d2430; */
       margin: 0;
       padding: 0;
       height: 100%;
