--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,3 @@
-
 #base-nav{
     height: 4.5rem;
     position: fixed;
@@ -11,9 +10,9 @@
   border-radius: 0.4rem;
     margin: 1rem;
     margin-top: 0.5rem;
-    box-shadow: #98eaf2db 0px 5px 15px;
+    background-color: #fff;
+    box-shadow: #fff 0px 5px 15px;
     position: relative;
-    background-color: #98eaf2db;
     justify-content: space-evenly;
 }
 @media (min-width: 1204px) {
@@ -27,27 +26,27 @@
 
 #nav-logo {
   color: #ffffff;
-  background-color: orange;
+  background-color: #000;
   padding-inline: 4rem;
   font-size: 3rem;
   font-style: oblique;
-  text-shadow: #f0f0f0ff 0px 5px 15px;
+  text-shadow: #f0f0f0 0px 5px 15px;
   position: relative;
   height: 80%;
   border-radius: 0.4rem;
-  box-shadow: #fa0f 0px 5px 15px;
+  box-shadow: #000 0px 5px 15px;
 
     display: flex;
     position: relative;
   justify-items: center;
   align-items: center;
   @media (max-width: 1204px) {
-
     font-size: 2rem;
   }
 }
 #bt-burger{
     display: none;
+    z-index: 30;
   @media (max-width: 1204px) {
     display: flex;
   }
@@ -69,16 +68,16 @@
 	display: inline-block;
 	width: 24px;
 	height: 24px;
-	color: #fa0;
+	color: #f00;
 }
 
 .walkerIll {
   position: absolute;
   height:10px;
   width: 10px;
-  background: #e55;
+  background: #ff7000bb;
   animation: walk 4s linear infinite;
-  box-shadow: #f00f 0px 5px 15px;
+  box-shadow: 0px 3px 5px 5px #ffc00066;
   border-radius: 50%;
 
 }
@@ -86,9 +85,9 @@
   position: absolute;
   height:10px;
   width: 10px;
-  background: #343;
+  background: #0ff;
   animation: walk 4s linear infinite;
-  box-shadow: #000f 0px 5px 15px;
+  box-shadow: 0px 3px 5px 5px #0ff6;
   border-radius: 50%;
 
 }
@@ -116,7 +115,6 @@
 #nav-item{
     display: flex;
   @media (max-width: 1204px) {
-      background: #4A6C7B;
       display: none;
   }
 }
@@ -140,7 +138,7 @@
   display: inline-block;
   
   /* Estilo del texto animado */
-  background: linear-gradient(135deg , #ff0000 50%,  #ff00aa 50%);
+  background: linear-gradient(135deg , #ff0000 50%,  #0ff 50%);
   background-size: 300%;
   background-position: bottom right;
   -webkit-background-clip: text;
@@ -154,7 +152,7 @@
   left: 0;
   height: 1px;
   width: 100%;
-  background: linear-gradient(135deg , #ff0000 50%,  #330909 50%);
+  background: linear-gradient(135deg , #ff0000 50%,  #0ff 50%);
   background-size: 300%;
   background-position: bottom right;
   transition: background-position 2.0s ease;
@@ -170,14 +168,14 @@
   background-position: top left;
 }
 .cont-home-nav-item-fo.active{
-    background-color: #ffff00;
-  box-shadow: #fa0 0px 5px 15px;
+  background-color: #012;
+  box-shadow: #0ff 0px 5px 15px;
 }
 .cont-home-nav-item-fo.active:hover{
   box-shadow: #f00 0px 5px 15px;
 }
 .cont-home-nav-item-fo.active::before{
-    background-color: #730909;
+    background-color: #630505;
 }
 
 /* NOTE: ITEMS NOT select*/
@@ -199,7 +197,7 @@
   display: inline-block;
   
   /* Estilo del texto animado */
-  background: linear-gradient(135deg , #ff00aa 50%,  #ff0000 50%);
+  background: linear-gradient(135deg , #ffee00 50%,  #ff0000 50%);
   background-size: 300%;
   background-position: bottom right;
   -webkit-background-clip: text;
@@ -213,7 +211,7 @@
   left: 0;
   height: 1px;
   width: 100%;
-  background: linear-gradient(135deg , #330909 50%,  #ff0000 50%);
+  background: linear-gradient(135deg , #ffee00 50%,  #ff0000 50%);
   background-size: 300%;
   background-position: bottom right;
   transition: background-position 2.0s ease;
@@ -240,6 +238,8 @@
   z-index: 0;
   /* 👇 crea stacking context explícito */
   isolation: isolate;
+  transition: transform 1.0s ease;
+
 }
 
 .cont-home-nav-item-fo::before {
@@ -249,7 +249,7 @@
   left: 0;
   width: 150%;
   height: 100%;
-  background-color: #ffff00;
+  background-color: #000;
   transform: scaleX(0) scaleY(0);
   transform: skew(-83deg, 0) translate(-150%);
   transform-origin: top left;
@@ -257,7 +257,7 @@
   z-index: -1; /* 👈 importante: por debajo del texto siempre */
 }
 .cont-home-nav-item-fo:hover{
-
+  transform: scale(1.05); /* Aumenta al 110% */
   box-shadow: #fa0 0px 5px 15px;
 }
 .cont-home-nav-item-fo:hover::before {
@@ -268,7 +268,6 @@
 #nav-contacts{
     display: flex;
   @media (max-width: 1204px) {
-      background: #4A6C7B;
       display: none;
   }
 }
@@ -292,7 +291,7 @@
   display: inline-block;
   
   /* Estilo del texto animado */
-  background: linear-gradient(135deg , #4ce3e3 50%,  #055 50%);
+  background: linear-gradient(135deg , #ff0000 50%,  #520 50%);
   background-size: 300%;
   background-position: bottom right;
   -webkit-background-clip: text;
@@ -306,7 +305,7 @@
   left: 0;
   height: 2px;
   width: 100%;
-  background: linear-gradient(135deg , #4ce3e3 50%,  #055 50%);
+  background: linear-gradient(135deg , #ff0000 50%,  #841 50%);
   background-size: 300%;
   background-position: bottom right;
   transition: background-position 0.5s ease;
@@ -323,25 +322,26 @@
 #cont-home-nav-item-ct {
   border-radius: 0.4rem;
   position: relative;
-  background-color: #4ce3e3e0;
+  background-color: #ffa905;
   overflow: hidden;
   margin-inline: 0.5rem;
   padding: 0.7rem;
   padding-top: 0.4rem;
-  box-shadow: #0aa 0px 5px 15px;
+  box-shadow: #f0610a 0px 5px 15px;
   z-index: 0;
   /* 👇 crea stacking context explícito */
   isolation: isolate;
+  transition: transform 0.3s ease; /* Transición suave */
 }
 
 #cont-home-nav-item-ct::before {
   content: "";
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 150%;
   height: 100%;
-  background-color: #055;
+  background-color: #fff;
   transform: scaleX(0) scaleY(0);
   transform: skew(-83deg, 0) translate(-150%);
   transform-origin: top left;
@@ -350,9 +350,94 @@
 }
 
 #cont-home-nav-item-ct:hover {
-  box-shadow: #055 0px 5px 15px;
+  box-shadow: #f00 0px 5px 15px;
+  transform: scale(1.05); /* Aumenta al 110% */
+
 }
 #cont-home-nav-item-ct:hover::before {
   transform: scaleX(1) scaleY(1);
 }
 
+/*NOTE: PHONE PANEL */
+
+#NavPhone{
+  position: fixed;
+  display: flex;
+  top: 55%;
+  left: 50%;
+  width: 80%;
+  height: auto;
+  transform: translate(-50%, -50%);
+
+  align-items: center;
+  justify-content: start;
+  justify-items: center;
+  text-align: center;
+}
+
+#NavPhoneBox{
+  border-radius: 0.4rem;
+  position: fixed;
+  width: 90%;
+  height: auto;
+  /* background-image: radial-gradient( closest-side,#f00,2%,transparent); */
+  background-color: #fff;
+  box-shadow: #fff 0px 5px 15px;
+  /* padding: 0.5rem; */
+  padding: 3rem;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+#NavPhoneItems{
+    /* background-color: #2323aaaa; */
+}
+#NavCot{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+#NavPhoneItems li{
+    /* background-color: #f00; */
+    padding-block: 0.3rem;
+    position: relative;
+    display: flex;
+
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+
+#NavPhoneItems li .cont-home-nav-item-fo
+{
+    width: 80%;
+}
+
+@keyframes slideInLeftIN {
+  from {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+}
+@keyframes slideInLeft {
+  from {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.entrada-desde-izquierda {
+  animation: slideInLeft 0.3s ease-out forwards;
+}
+.salida-desde-izquierda {
+  animation: slideInLeftIN 0.3s ease-out forwards;
+}
