--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -143,7 +143,7 @@
     width: 60%;
     height: 60%;
     font-size: 2.2rem;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -195,7 +195,7 @@
     width: 60%;
     height: 60%;
     font-size: 2.2rem;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
     display: flex;
     justify-content: center;
     align-items: center;
