--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -184,13 +184,12 @@
   z-index: 1;
   padding-inline: 0.5rem;
   color: #ffa500;
-  text-shadow: #111111ff 0px 5px 15px;
         /* Text gradient background for animation */
 
   position: relative;
   z-index: 1;
   padding-inline: 0.5rem;
-  text-shadow: #ff0 0px 5px 15px;
+  text-shadow: #f50 0px 5px 15px;
 
 
   position: relative;
@@ -303,7 +302,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 2px;
+  height: 1px;
   width: 100%;
   background: linear-gradient(135deg , #ff0000 50%,  #841 50%);
   background-size: 300%;
