--- a/src/styles/Home/Tecnologias.css
+++ b/src/styles/Home/Tecnologias.css
@@ -13,6 +13,7 @@
     width: 100%;
     height: 70%;
     display: flex;
+    position: relative;
     justify-content: start;
     align-items: center;
   @media (max-width: 1204px) {
@@ -22,6 +23,7 @@
 }
 #HTC{
     /* background-color: #548; */
+    position: relative;
     width: 100%;
     height: 30%;
     display: flex;
@@ -60,7 +62,7 @@
     width: 100%;
     height: auto;
     /* padding: 0.4rem; */
-    padding-inline: 2.5rem;
+    padding: 1.5rem;
   }
 }
 #HTTB p {
@@ -184,6 +186,7 @@
       font-size: 1.2rem;
     width: 100%;
     height: auto;
+    padding: 1.5rem;
   }
 }
 
