--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -139,7 +139,8 @@
     left: 0;
     top: 10%;
     width: 60%;
-    height: 60%;
+    min-height: 60%;
+    height: auto;
     font-size: 2.2rem;
     /* font-family: 'Courier New', Courier, monospace; */
     display: flex;
@@ -191,7 +192,8 @@
     background-color: var(--fotb);
     color: var(--fotb1);
     width: 60%;
-    height: 60%;
+    min-height: 60%;
+    height: auto;
     font-size: 2.2rem;
     /* font-family: 'Courier New', Courier, monospace; */
     display: flex;
