--- a/src/styles/catalogo/phone.css
+++ b/src/styles/catalogo/phone.css
@@ -53,7 +53,23 @@ color: #a80b0b;
   text-decoration-thickness: 2px;
   font-size: 2.0rem;
   animation: cambioColor 2s infinite alternate;
+    cursor: pointer;
+}
+.ybttt:hover{
 
+  animation: cambioColorH 1.5s infinite alternate;
+}
+@keyframes cambioColorH {
+  from {
+    color: #d83b3b;
+  filter: drop-shadow(5px 5px 10px #f72495) drop-shadow(-3px -3px 5px #ce2323);
+    scale: 1.1;
+  }
+  to {
+    color: #ff3030;
+  filter: drop-shadow(5px 5px 10px #f72445) drop-shadow(-3px -3px 5px #ff2323);
+  scale: 1.2;
+  }
 }
 
 @keyframes cambioColor {
