--- a/src/styles/logo_init.css
+++ b/src/styles/logo_init.css
@@ -11,7 +11,7 @@
     .base-circle {
       width: 100%;
       height: 100%;
-      background: var(--rogo);
+      background: white;
       border-radius: 50%;
     }
     .relleno {
@@ -19,7 +19,7 @@
       left: -5%;
       width: 110%;
       height: 110%;
-      background: var(--rogo);
+      background: white;
       border-radius: 50%;
       position: absolute;
       z-index: -2;
@@ -34,7 +34,7 @@
       height: 110%;
       border-radius: 50%;
       background: conic-gradient(
-        var(--methal) 0deg 46deg, /* 10% de 360° = 36° */
+        black 0deg 46deg, /* 10% de 360° = 36° */
         transparent 36deg 360deg
       );
     z-index: -1;
@@ -56,7 +56,7 @@
   padding-top: 20px;
   border-radius: 8px;
   font-size: 12rem;
-  color: var(--methal);
+  color: black;
   font-family: monospace;
     }
     .log-cont {
