Fixed font size in logo

--- a/src/styles/logo_init.css
+++ b/src/styles/logo_init.css
@@ -57,7 +57,7 @@
   border-radius: 8px;
   font-size: 12rem;
   color: black;
-  font-family: monospace;
+  /* font-family: monospace; */
     }
     .log-cont {
         opacity: 0;
