--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,11 +14,12 @@
 @import "./catalogo/phone.css";
 @import "./catalogo/pollos.css";
 @import "./catalogo/madera.css";
+@import "./catalogo/Ingenieria.css";
 
 :root {
     --spacing: 0.25rem;
-  --background: #1e323c;
-  --foreground: #ffffff;
+  /* --background: #1e323c; */
+  /* --foreground: #ffffff; */
         --rogo: #4A6C7B;
         --methal: #93BFCE;
   --site-header-height: 3.5rem;
