Create burger secition example

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
 @import "./catalogo/pollos.css";
 @import "./catalogo/madera.css";
 @import "./catalogo/Ingenieria.css";
+@import "./catalogo/burger.css";
 
 :root {
     --spacing: 0.25rem;
