--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -254,3 +254,37 @@
 }
 
 
+
+
+/*NOTE: footer*/
+
+.Footer-base{
+    position: relative;
+    background-color: white;
+    height: max-content;
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+  justify-content: center;
+  align-items: center;
+    font-size: 2rem;
+    border-radius: 0.5rem;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    z-index: 1;
+}
+.food-title{
+    color: #fff;
+    background-color: #000;
+    border-radius: 0.5rem;
+    /* border: 2px solid #000000; */
+    padding: 0.2rem;
+
+    box-shadow: #000 5px 5px 25px;
+    text-shadow: #fff 0px 5px 15px;
+    padding-inline: 1rem;
+}
+.ttfoo{
+    font-size: 1rem;
+    text-align: center;
+}
