--- a/src/styles/pop.css
+++ b/src/styles/pop.css
@@ -45,6 +45,7 @@
       font-size: 1.0rem;
     height: auto;
   }
+  z-index: 100;
 }
 
 /* Caja del popup */
@@ -89,45 +90,49 @@
   cursor: pointer;
 
     position: absolute;
-    --fotb: #01323e;
-    --fotb1: #00ffff;
-    top: -15%;
+    --fotb: #ffffff;
+    --fotb1: #dd0000;
+    top: -8%;
     right: -4%;
     background-color: var(--fotb);
     color: var(--fotb1);
     width: max-content;
     height: auto;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     font-weight:900;
     /* font-family: 'Courier New', Courier, monospace; */
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    text-shadow: var(--fotb1) 0px 2px 15px;
-    box-shadow: var(--fotb) 5px 5px 15px;
-    padding-inline: 0.5rem;
+    /* text-shadow: var(--fotb1) 0px 0px 5px; */
+    box-shadow: var(--fotb1) 0px 0px 15px;
+    padding-inline: 0.1rem;
+    line-height: 1.5rem;
+    /* padding-top: 0.1rem; */
     border-radius: 5px;
     /* box-shadow: 0px 0px 30px rgba(227,228, 237, 0.37); */
     /* border: 3px solid #000000ff; */
     backdrop-filter: blur(05px);
   @media (max-width: 1204px) {
     /* padding: 1.0rem; */
-      font-size: 1.0rem;
+      font-size: 1.3rem;
     height: auto;
+    padding-top: 0.1rem;
+    line-height: 1.1rem;
   }
-
+scale: 1.5;
 }
 
-#close-btn:hover {
-    position: absolute;
-    --fotb: #330000;
-    --fotb1: #ff0000;
-    background-color: var(--fotb);
-    color: var(--fotb1);
-    text-shadow: var(--fotb1) 0px 2px 15px;
-    box-shadow: var(--fotb) 5px 5px 15px;
-}
+/* #close-btn:future { */
+/*     position: absolute; */
+/*     --fotb: #ffffff; */
+/*     --fotb1: #000000; */
+/*     background-color: var(--fotb); */
+/*     color: var(--fotb1); */
+/*     text-shadow: var(--fotb1) 0px 2px 15px; */
+/*     box-shadow: var(--fotb) 5px 5px 15px; */
+/* } */
 
 
 /* Texto del popup */
