--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,8 @@
 @import "./catalogo/madera.css";
 @import "./catalogo/Ingenieria.css";
 @import "./catalogo/burger.css";
+@import "./catalogo/saltena.css";
+@import "./catalogo/heladeria.css";
 
 :root {
     --spacing: 0.25rem;
@@ -251,6 +253,7 @@ html, body {
   overflow: hidden;
   background: #1d2430;
   /* background: transparent; */
+  /* transform: skew(30deg) rotate(35deg), */
 }
 
 /* Base del rectángulo */
@@ -274,21 +277,19 @@ html, body {
 @keyframes enter {
   0% {
     opacity: 0;
-transform: translateY(var(--start-offset, 0));
+    transform: translateY(var(--start-offset, 0)) skew(30deg) rotate(35deg);
   }
-  20%{
+  20% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) skew(30deg) rotate(35deg);
   }
-  80%{
+  80% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0) skew(30deg) rotate(35deg);
   }
-  100%{
-    /* opacity: 1; */
-    /* transform: translateY(0); */
+  100% {
     opacity: 0;
-    transform: translateY(var(--start-offset, 0));
+    transform: translateY(var(--start-offset, 0)) skew(30deg) rotate(35deg);
   }
 }
 
