--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -277,19 +277,19 @@ html, body {
 @keyframes enter {
   0% {
     opacity: 0;
-    transform: translateY(var(--start-offset, 0)) skew(30deg) rotate(35deg);
+    transform: translateY(var(--start-offset, 0));
   }
   20% {
     opacity: 1;
-    transform: translateY(0) skew(30deg) rotate(35deg);
+    transform: translateY(0) ;
   }
   80% {
     opacity: 1;
-    transform: translateY(0) skew(30deg) rotate(35deg);
+    transform: translateY(0) ;
   }
   100% {
     opacity: 0;
-    transform: translateY(var(--start-offset, 0)) skew(30deg) rotate(35deg);
+    transform: translateY(var(--start-offset, 0)) ;
   }
 }
 
